Full first commit

--- a/reviews.html
+++ b/reviews.html
@@ -10,6 +10,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
+<nav class="navbar">
+  <ul>
+      <li><a href="thevilla.html">The Villa</a></li>
+      <li><a class="active" href="reviews.html">Reviews</a></li>
+      <li><a href="availability.html">Availability</a></li>
+      <li><a href="interior.html">Gallery Interior</a></li>
+      <li><a href="outdoor.html">Gallery Outdoor</a></li>
+  </ul>
+</nav> 
+
 <body>
   <div id="intro_box">
     <div id="adresa">
