--- a/availability.html
+++ b/availability.html
@@ -15,8 +15,8 @@
 
 <nav class="navbar">
     <ul>
-        <li><a href="thevilla.html">The Villa</a></li>
-        <li><a href="reviews.html">Reviews</a></li>
+      <li><a href="index.html">The Villa</a></li>
+      <li><a href="reviews.html">Reviews</a></li>
         <li><a class="active" href="availability.html">Availability</a></li>
         <li><a href="interior.html">Gallery Interior</a></li>
         <li><a href="outdoor.html">Gallery Outdoor</a></li>
