--- a/interior.html
+++ b/interior.html
@@ -12,7 +12,7 @@
 
 <nav class="navbar">
     <ul>
-        <li><a href="thevilla.html">The Villa</a></li>
+        <li><a href="index.html">The Villa</a></li>
         <li><a href="reviews.html">Reviews</a></li>
         <li><a href="availability.html">Availability</a></li>
         <li><a class="active" href="interior.html">Gallery Interior</a></li>
