--- a/reviews.html
+++ b/reviews.html
@@ -12,7 +12,7 @@
 
 <nav class="navbar">
   <ul>
-      <li><a href="thevilla.html">The Villa</a></li>
+      <li><a href="index.html">The Villa</a></li>
       <li><a class="active" href="reviews.html">Reviews</a></li>
       <li><a href="availability.html">Availability</a></li>
       <li><a href="interior.html">Gallery Interior</a></li>
