Update concerning mobile phone compatibility

--- a/availability.html
+++ b/availability.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html>
 
-<!-- /* For now, the calendar is from: https://github.com/kaizhelam/Calendar */ -->
-
 <head>
     <title> Availability </title>
     <link rel="stylesheet" href="availability.css">
@@ -14,42 +12,45 @@
 </head>
 
 <nav class="navbar">
-    <ul>
+  <ul>
       <li><a href="index.html">The Villa</a></li>
       <li><a href="reviews.html">Reviews</a></li>
-        <li><a class="active" href="availability.html">Availability</a></li>
-        <li><a href="interior.html">Gallery Interior</a></li>
-        <li><a href="outdoor.html">Gallery Outdoor</a></li>
-    </ul>
+      <li><a class="active" href="availability.html">Availability</a></li>
+      <li><a href="gallery.html">Gallery</a></li>
+  </ul>
 </nav> 
 
 <body>
+    <div id="availability">
+      <img class="calendar" src="the_villa_images/calendar.png">
 
-    <img class="calendar" src="the_villa_images/calendar.png">
-
-    <p class = 'text'>Prices depend on the season, length of stay, number of people.
-        Prices can range from 300.00 to 1,100.00 euros / day / 10 people. Minimum stay is 6 nights.
-        For all information, it is best to contact us by email, so that we can offer you the best option that would fit into your budget.
+    <p class = 'text'>Prices <span style="font-family:GeneralSansMedium">depend on the season, length of stay, number of people</span>.
+        Minimum stay is 6 nights.</br>
+        For all information, it is <span style="font-family:GeneralSansMedium">best to contact us by email</span>, so that we can offer you the best option that would </br>fit into your budget.
         <br>
 
         <br>
-        The price includes:<br>
-        - rent of the entire house for vacation, with summer kitchen, terraces and garden<br>
+        <span style="font-family:GeneralSansMedium">The price includes</span>:<br>
+        <br>
+        - rent of the <span style="font-family:GeneralSansMediumItalic">entire house</span> for vacation, with summer kitchen, terraces and garden<br>
         - hot tub<br>
         - grill, wood, coal<br>
-        - parking<br>
+        - <span style="font-family:GeneralSansMediumItalic">parking</span><br>
         - water and electricity consumption<br>
         - basic cooking supplies<br>
+        - <span style="font-family:GeneralSansMediumItalic">wi-fi (fast 5g internet)</span><br>
         - bed sheet, towels<br>
         - accommodation tax<br>
         - means for cleaning and washing clothes, dishes and the space<br>
-        - wi-fi (fast 5g internet)<br>
-        - boat in the summer season + 2x StandUP Paddle Boards<br>
+        - <span style="font-family:GeneralSansMediumItalic">boat</span> in the summer season + 2x StandUP Paddle Boards<br>
         <br>
 
-        For all additional information, reservations and inquiries, contact us via email villastrmo@gmail.com or phone +385 91 4550781 (WhatsApp)</p>
+        For all additional information, reservations and inquiries,<span style="font-family:GeneralSansMedium"> contact 
+          us </span> via email <span style="font-family:GeneralSansMediumItalic">villastrmo@gmail.com</span>  or</br> on 
+          the phone <span style="font-family:GeneralSansMediumItalic"> +385 91 455 0781</span>.</p>
+      </div>
 
-      <div id="footnote">
+      <div id="footnote_av">
         <div id="contact">
           <p>Contact</p>
           <span style="font-family:GeneralSansLight;font-size:16px;color: black;">
@@ -58,4 +59,5 @@
           </span>
         </div>
       </div>
+
 </body>
