--- a/gallery.html
+++ b/gallery.html
@@ -11,16 +11,39 @@
 </head>
 
 <nav class="navbar">
-    <ul>
-        <li><a href="index.html">The Villa</a></li>
-        <li><a href="reviews.html">Reviews</a></li>
-        <li><a href="availability.html">Availability</a></li>
-        <li><a class="active" href="interior.html">Gallery Interior</a></li>
-        <li><a href="outdoor.html">Gallery Outdoor</a></li>
-    </ul>
+  <ul>
+      <li><a href="index.html">The Villa</a></li>
+      <li><a href="reviews.html">Reviews</a></li>
+      <li><a href="availability.html">Availability</a></li>
+      <li><a class="active" href="gallery.html">Gallery</a></li>
+  </ul>
 </nav> 
 
 <body>
+  <p class ="p">Garden, summer kitchen and villa's exterior</p>
+
+  <img src="exterior/1.jpeg">
+    <img src="exterior/2.jpg">
+    <img src="exterior/3.jpg">
+    <img class="smallerphotos" src="exterior/4.jpg">
+    <img class="smallerphotos" src="exterior/5.jpg">
+    <img src="exterior/6.jpg">
+    <img src="exterior/7.jpg">
+    <img src="exterior/8.jpg">
+    <img src="exterior/9.jpg">
+    <img src="exterior/10.jpg">
+    <img src="exterior/11.jpg">
+    <img src="exterior/12.jpg">
+    <img src="exterior/13.jpg">
+    <img src="exterior/14.jpg">
+    <img src="exterior/15.jpg">
+    <img src="exterior/17.jpg">
+    <img src="exterior/19.jpeg">
+    <div>
+    <span style="padding-bottom:0px;"><img id = 'not_me' src="exterior/20.jpeg"></img></span>
+  </div>
+  <p class ="p">Villa's interior</p>
+
     <p class ="p">Living room and kitchen</p>
     <img src="interior/1.jpg">
     <img src="interior/2.jpg">
@@ -50,7 +73,7 @@
     <img class="smallerphotos2" src="interior/23.jpg">
     
 
-  <div id="footnote3">
+  <div id="footnote_gal">
     <div id="contact">
       <p>Contact</p>
       <span style="font-family:GeneralSansLight;font-size:16px;color: black;">
