--- a/reviews.html
+++ b/reviews.html
@@ -15,8 +15,7 @@
       <li><a href="index.html">The Villa</a></li>
       <li><a class="active" href="reviews.html">Reviews</a></li>
       <li><a href="availability.html">Availability</a></li>
-      <li><a href="interior.html">Gallery Interior</a></li>
-      <li><a href="outdoor.html">Gallery Outdoor</a></li>
+      <li><a href="gallery.html">Gallery</a></li>
   </ul>
 </nav> 
 
