Updating reviews.html for mobile

--- a/reviews.html
+++ b/reviews.html
@@ -50,104 +50,103 @@
     </div>
   </div>
 
-  <div id="CarlGermany">
-    <p><span style="font-family:GeneralSansMedium;font-size:20px">Carl, Germany</span></p>
-    <p><span style="font-family:GeneralSansLight;font-size:18px">2023 </span></p>
+  <p id="CarlGermany">
+    <span style="font-family:GeneralSansMedium;font-size:20px">Carl, Germany</span></br>
+    <span style="font-family:GeneralSansLight;font-size:18px">2023 </span></br>
     <br>
-    <p>Villa Strmo is <span style="font-family:GeneralSansMediumItalic">a very special place</span> and we felt incredibly relaxed all ten days.</p>
-    <p>We were therd with nine adults and a small child (4) and enjoyed every minute.</p>
-    <p>The house is furnished with everything you need and is <span style="font-family:GeneralSansMediumItalic">right on the sea.</span> The </p>
-    <p>rooms are modern, all have their own bathrooms and the beds and blankets</p>
-    <p>are great. There are two kitchens and the <span style="font-family:GeneralSansMediumItalic">outdoor kitchen</span> is a dream. The </p>
-    <p>garden, the <span style="font-family:GeneralSansMediumItalic">chill areas</span>c and the jacuzzi are also great and everyone has found </p>
-    <p>their place. We found and used many leisure activities for sea and garden.</p>
-    <p>Thanks for the easel and the various painting utensils! <span style="font-family:GeneralSansMediumItalic">Altogether successful</span> </p>
-    <p>and if we come back into the corner then its with Goran.</p>
-  </div>
+    Villa Strmo is <span style="font-family:GeneralSansMediumItalic">a very special place</span> and we felt incredibly relaxed all ten days.</br>
+    We were there with nine adults and a small child (4) and enjoyed every minute.</br>
+    The house is furnished with everything you need and is <span style="font-family:GeneralSansMediumItalic">right on the sea.</span> The </br>
+    rooms are modern, all have their own bathrooms and the beds and blankets</br>
+    are great. There are two kitchens and the <span style="font-family:GeneralSansMediumItalic">outdoor kitchen</span> is a dream. The </br>
+    garden, the <span style="font-family:GeneralSansMediumItalic">chill areas</span>c and the jacuzzi are also great and everyone has found </br>
+    their place. We found and used many leisure activities for sea and garden.</br>
+    Thanks for the easel and the various painting utensils! <span style="font-family:GeneralSansMediumItalic">Altogether successful</span> </br>
+    and if we come back into the corner then its with Goran.</br>
+  </p>
+  <p id="ClarissaGermany">
+    <span style="font-family:GeneralSansMedium;font-size:20px">Clarissa, Germany</span></br>
+    <span style="font-family:GeneralSansLight;font-size:18px">2022 </span></br>
+    <br>
+    An absolute dream villa! We hardly left the villa as it <span style="font-family:GeneralSansMediumItalic">really offers everything</span> your</br>
+    heart desires! The outdoor kitchen in particular is really fantastic. The whirlpool </br>
+    even has a music function! Goran and Viktor are super personable and were</br>
+    always available and available with advice and action. As a surprise there was a </br>
+    stand-up paddle for the new season! Although we already had high expectations</br>
+    based on the pictures, these <span style="font-family:GeneralSansMediumItalic">expectations were exceeded</span> on site.</br>
+  </p>
 
-  <div id="ClarissaGermany">
-    <p><span style="font-family:GeneralSansMedium;font-size:20px">Clarissa, Germany</span></p>
-    <p><span style="font-family:GeneralSansLight;font-size:18px">2022 </span></p>
+  <p id="Kelly">
+    <span style="font-family:GeneralSansMedium;font-size:20px">Kelly</span></br>
+    <span style="font-family:GeneralSansLight;font-size:18px">May 2016 </span></br>
     <br>
-    <p>An absolute dream villa! We hardly left the villa as it <span style="font-family:GeneralSansMediumItalic">really offers everything</span> your</p>
-    <p>heart desires! The outdoor kitchen in particular is really fantastic. The whirlpool </p>
-    <p>even has a music function! Goran and Viktor are super personable and were</p>
-    <p>always available and available with advice and action. As a surprise there was a </p>
-    <p>stand-up paddle for the new season! Although we already had high expectations</p>
-    <p>based on the pictures, these <span style="font-family:GeneralSansMediumItalic">expectations were exceeded</span> on site.</p>
-  </div>
+    Wow! What an incredible house with a fantastic location. Very thankful to.</br>
+    find this house for our stay! Viktor and his father were great hosts. The </br>
+    contact prior to <span style="font-family:GeneralSansMediumItalic">our stay was informative and helpful</span>, Viktor answered any</br>
+    questions we had. On the day of arrival we were met a short drive away </br>
+    from the house then followed Viktor and his father to the house (the roads</br>
+    are narrow and steep hills at times). At the house Viktor gave us a tour. We </br>
+    then sat in the garden all together and Viktor offered us a  <span style="font-family:GeneralSansMediumItalic">welcome drink</span></br>
+    and gave us some house and local tips/information. Throughout our stay</br>
+    Viktor was contactable and  <span style="font-family:GeneralSansMediumItalic">very quick to reply</span> when we had any </br>
+    questions. A lovely, memorable stay for our group (6 adults, 2 children and</br>
+    a baby) and we  <span style="font-family:GeneralSansMediumItalic">hope to visit again.</span> With sincere thanks!</br>
+  </p>
 
-  <div id="Kelly">
-    <p><span style="font-family:GeneralSansMedium;font-size:20px">Kelly</span></p>
-    <p><span style="font-family:GeneralSansLight;font-size:18px">May 2016 </span></p>
+  <p id="ClaudiaAustria">
+    <span style="font-family:GeneralSansMedium;font-size:20px">Claudia, Austria</span></br>
+    <span style="font-family:GeneralSansLight;font-size:18px">2021 </span></br>
     <br>
-    <p>Wow! What an incredible house with a fantastic location. Very thankful to.</p>
-    <p>find this house for our stay! Viktor and his father were great hosts. The </p>
-    <p>contact prior to <span style="font-family:GeneralSansMediumItalic">our stay was informative and helpful</span>, Viktor answered any</p>
-    <p>questions we had. On the day of arrival we were met a short drive away </p>
-    <p>from the house then followed Viktor and his father to the house (the roads</p>
-    <p>are narrow and steep hills at times). At the house Viktor gave us a tour. We </p>
-    <p>then sat in the garden all together and Viktor offered us a  <span style="font-family:GeneralSansMediumItalic">welcome drink</span></p>
-    <p>and gave us some house and local tips/information. Throughout our stay</p>
-    <p>Viktor was contactable and  <span style="font-family:GeneralSansMediumItalic">very quick to reply</span> when we had any </p>
-    <p>questions. A lovely, memorable stay for our group (6 adults, 2 children and</p>
-    <p>a baby) and we  <span style="font-family:GeneralSansMediumItalic">hope to visit again.</span> With sincere thanks!</p>
-  </div>
+    Dream house by the sea!</br>
+    We were welcomed very warmly by Viktor, owners son, who invited us to Villa Strmo.</br>
+    Only a few kilometers from Trogir, you can reach this beautiful, <span style="font-family:GeneralSansMediumItalic">completely newly</span> </br>
+    <span style="font-family:GeneralSansMediumItalic">renovated</span> Villa via a narrow steep road. Viktor took a lot of time and showed us </br>
+    everything in and around the house. For example, the service from the <span style="font-family:GeneralSansMediumItalic">great jacuzzi</span></br>
+    which we enjoyed every day.</br>
+    The villa actually exceeded our expectations! The photos in advance were really nice, </br>
+    but this view from the garden to the sea was overwhelming. Garden door up </br>
+    and into the <span style="font-family:GeneralSansMediumItalic">crystal clear sea.</span> I A metal guide makes it very easy to get into the water.</br>
+    Only a few meters away you can reach a beach, which is very suitable for small </br>
+    children.</br>
+    Villa has 5 very <span style="font-family:GeneralSansMediumItalic">beautiful rooms each with its own bathroom.</span> The house is very</br>
+    lovingly furnished and has a special flair with a feel good factor. In the garden there is </br>
+    the outdoor kitchen, equipped with everything you can imagine (induction cooker, </br>
+    oven, dishwasher, large refrigerators, dishes, glasses...). The <span style="font-family:GeneralSansMediumItalic">large garden</span> has many</br>
+    different places where you can sit together, but also be undisturbed. Sun beds,</br>
+    porch swing, different lovely lounges. We all <span style="font-family:GeneralSansMediumItalic">felt completely comfortable</span> this week </br>
+    and will definitely be back.</br>
+    Again, our warmest thanks to Viktor, Goran and Lea for the <span style="font-family:GeneralSansMediumItalic">very warm hospitality</span>.</br>
+    We look forward to a reunion.</br>
+  </p>
 
-  <div id="ClaudiaAustria">
-    <p><span style="font-family:GeneralSansMedium;font-size:20px">Claudia, Austria</span></p>
-    <p><span style="font-family:GeneralSansLight;font-size:18px">2021 </span></p>
+  <p id="Laura">
+    <span style="font-family:GeneralSansMedium;font-size:20px">Laura</span></br>
+    <span style="font-family:GeneralSansLight;font-size:18px">September, 2022</span></br>
     <br>
-    <p>Dream house by the sea!</p>
-    <p>We were welcomed very warmly by Viktor, owners son, who invited us to Villa Strmo.</p>
-    <p>Only a few kilometers from Trogir, you can reach this beautiful, <span style="font-family:GeneralSansMediumItalic">completely newly</span> </p>
-    <p><span style="font-family:GeneralSansMediumItalic">renovated</span> Villa via a narrow steep road. Viktor took a lot of time and showed us </p>
-    <p>everything in and around the house. For example, the service from the <span style="font-family:GeneralSansMediumItalic">great jacuzzi</span></p>
-    <p>which we enjoyed every day.</p>
-    <p>The villa actually exceeded our expectations! The photos in advance were really nice, </p>
-    <p>but this view from the garden to the sea was overwhelming. Garden door up </p>
-    <p>and into the <span style="font-family:GeneralSansMediumItalic">crystal clear sea.</span> I A metal guide makes it very easy to get into the water.</p>
-    <p>Only a few meters away you can reach a beach, which is very suitable for small </p>
-    <p>children.</p>
-    <p>Villa has 5 very <span style="font-family:GeneralSansMediumItalic">beautiful rooms each with its own bathroom.</span> The house is very</p>
-    <p>lovingly furnished and has a special flair with a feel good factor. In the garden there is </p>
-    <p>the outdoor kitchen, equipped with everything you can imagine (induction cooker, </p>
-    <p>oven, dishwasher, large refrigerators, dishes, glasses...). The <span style="font-family:GeneralSansMediumItalic">large garden</span> has many</p>
-    <p>different places where you can sit together, but also be undisturbed. Sun beds,</p>
-    <p>porch swing, different lovely lounges. We all <span style="font-family:GeneralSansMediumItalic">felt completely comfortable</span> this week </p>
-    <p>and will definitely be back.</p>
-    <p>Again, our warmest thanks to Viktor, Goran and Lea for the <span style="font-family:GeneralSansMediumItalic">very warm hospitality</span>.</p>
-    <p>We look forward to a reunion.</p>
-  </div>
+    Best week ever! This house is <span style="font-family:GeneralSansMediumItalic">absolutely amazing</span>. We had a really great time as</br>
+    a family. The location is very beautiful und the  <span style="font-family:GeneralSansMediumItalic">communication was very easy.</span></br>
+    We would definitely come again!</br>
+  </p>
 
-  <div id="Laura">
-    <p><span style="font-family:GeneralSansMedium;font-size:20px">Laura</span></p>
-    <p><span style="font-family:GeneralSansLight;font-size:18px">September, 2022</span></p>
+  <p id="Oscar">
+    <span style="font-family:GeneralSansMedium;font-size:20px">Oscar</span></br>
+    <span style="font-family:GeneralSansLight;font-size:18px">July, 2018</span></br>
     <br>
-    <p>Best week ever! This house is <span style="font-family:GeneralSansMediumItalic">absolutely amazing</span>. We had a really great time as</p>
-    <p>a family. The location is very beautiful und the  <span style="font-family:GeneralSansMediumItalic">communication was very easy.</span></p>
-    <p>We would definitely come again!</p>
-  </div>
+    The apartment is great, we have <span style="font-family:GeneralSansMediumItalic">really enjoyed our stay here.</span> Everything was as</br>
+    expected and as shown on the ad. Victor and Lea were very helpful and</br>
+    welcoming, gave us good tips and hints. <span style="font-family:GeneralSansMediumItalic">Couldn't ask for more!</span> We will</br>
+    <span style="font-family:GeneralSansMediumItalic">definitely recommend</span> this place to our friends!
+  </p>
 
-  <div id="Oscar">
-    <p><span style="font-family:GeneralSansMedium;font-size:20px">Oscar</span></p>
-    <p><span style="font-family:GeneralSansLight;font-size:18px">July, 2018</span></p>
+  <p id="Mirek">
+    <span style="font-family:GeneralSansMedium;font-size:20px">Mirek</span></br>
+    <span style="font-family:GeneralSansLight;font-size:18px">July, 2018</span></br>
     <br>
-    <p>The apartment is great, we have <span style="font-family:GeneralSansMediumItalic">really enjoyed our stay here.</span> Everything was as</p>
-    <p>expected and as shown on the ad. Victor and Lea were very helpful and</p>
-    <p>welcoming, gave us good tips and hints. <span style="font-family:GeneralSansMediumItalic">Couldn't ask for more!</span> We will</p>
-    <p><span style="font-family:GeneralSansMediumItalic">definitely recommend</span> this place to our friends!
-  </div>
-
-  <div id="Mirek">
-    <p><span style="font-family:GeneralSansMedium;font-size:20px">Mirek</span></p>
-    <p><span style="font-family:GeneralSansLight;font-size:18px">July, 2018</span></p>
-    <br>
-    <p>Goran's home was <span style="font-family:GeneralSansMediumItalic">even better than the pictures.</span> The check in was easy and the</p>
-    <p>home was walking distance to the beach, downtown, and the stadium. Goran even</p>
-    <p>allowed us a late check out the following day since our plane didn't leave until the</p>
-    <p>afternoon. Thanks so much for <span style="font-family:GeneralSansMediumItalic">a great stay!</span></p>
-  </div>
+    Goran's home was <span style="font-family:GeneralSansMediumItalic">even better than the pictures.</span> The check in was easy and the</br>
+    home was walking distance to the beach, downtown, and the stadium. Goran even</br>
+    allowed us a late check out the following day since our plane didn't leave until the</br>
+    afternoon. Thanks so much for <span style="font-family:GeneralSansMediumItalic">a great stay!</span></br>
+  </p>
 
   <div id="footnote">
     <div id="contact">
