--- a/reviews.html
+++ b/reviews.html
@@ -64,6 +64,7 @@
     Thanks for the easel and the various painting utensils! <span style="font-family:GeneralSansMediumItalic">Altogether successful</span> </br>
     and if we come back into the corner then its with Goran.</br>
   </p>
+
   <p id="ClarissaGermany">
     <span style="font-family:GeneralSansMedium;font-size:20px">Clarissa, Germany</span></br>
     <span style="font-family:GeneralSansLight;font-size:18px">2022 </span></br>
@@ -118,7 +119,7 @@
     Again, our warmest thanks to Viktor, Goran and Lea for the <span style="font-family:GeneralSansMediumItalic">very warm hospitality</span>.</br>
     We look forward to a reunion.</br>
   </p>
-
+  
   <p id="Laura">
     <span style="font-family:GeneralSansMedium;font-size:20px">Laura</span></br>
     <span style="font-family:GeneralSansLight;font-size:18px">September, 2022</span></br>
@@ -149,13 +150,11 @@
   </p>
 
   <div id="footnote">
-    <div id="contact">
-      <p>Contact</p>
+      <p id="contact">Contact</p>
       <span style="font-family:GeneralSansLight;font-size:16px;color: black;">
-        <p>email: <a href="mailto:villastrmo@gmail.com">villastrmo@gmail.com </a></p>
-        <p>phone: +385 91 455 0781 </p>
+        <p style="position: relative;left: 7vw; top: 30px;">email: <a href="mailto:villastrmo@gmail.com">villastrmo@gmail.com </a></p>
+        <p style="position: relative;left: 7vw; top: 20px;">phone: +385 91 455 0781 </p>
       </span>
-    </div>
   </div>
 
 </body>
