--- a/reviews.html
+++ b/reviews.html
@@ -50,6 +50,7 @@
     </div>
   </div>
 
+  <div>
   <p id="CarlGermany">
     <span style="font-family:GeneralSansMedium;font-size:20px">Carl, Germany</span></br>
     <span style="font-family:GeneralSansLight;font-size:18px">2023 </span></br>
@@ -59,12 +60,11 @@
     The house is furnished with everything you need and is <span style="font-family:GeneralSansMediumItalic">right on the sea.</span> The </br>
     rooms are modern, all have their own bathrooms and the beds and blankets</br>
     are great. There are two kitchens and the <span style="font-family:GeneralSansMediumItalic">outdoor kitchen</span> is a dream. The </br>
-    garden, the <span style="font-family:GeneralSansMediumItalic">chill areas</span>c and the jacuzzi are also great and everyone has found </br>
+    garden, the <span style="font-family:GeneralSansMediumItalic">chill areas</span> and the jacuzzi are also great and everyone has found </br>
     their place. We found and used many leisure activities for sea and garden.</br>
     Thanks for the easel and the various painting utensils! <span style="font-family:GeneralSansMediumItalic">Altogether successful</span> </br>
     and if we come back into the corner then its with Goran.</br>
   </p>
-
   <p id="ClarissaGermany">
     <span style="font-family:GeneralSansMedium;font-size:20px">Clarissa, Germany</span></br>
     <span style="font-family:GeneralSansLight;font-size:18px">2022 </span></br>
@@ -76,7 +76,9 @@
     stand-up paddle for the new season! Although we already had high expectations</br>
     based on the pictures, these <span style="font-family:GeneralSansMediumItalic">expectations were exceeded</span> on site.</br>
   </p>
+</div>
 
+<div>
   <p id="Kelly">
     <span style="font-family:GeneralSansMedium;font-size:20px">Kelly</span></br>
     <span style="font-family:GeneralSansLight;font-size:18px">May 2016 </span></br>
@@ -93,7 +95,6 @@
     questions. A lovely, memorable stay for our group (6 adults, 2 children and</br>
     a baby) and we  <span style="font-family:GeneralSansMediumItalic">hope to visit again.</span> With sincere thanks!</br>
   </p>
-
   <p id="ClaudiaAustria">
     <span style="font-family:GeneralSansMedium;font-size:20px">Claudia, Austria</span></br>
     <span style="font-family:GeneralSansLight;font-size:18px">2021 </span></br>
@@ -119,7 +120,9 @@
     Again, our warmest thanks to Viktor, Goran and Lea for the <span style="font-family:GeneralSansMediumItalic">very warm hospitality</span>.</br>
     We look forward to a reunion.</br>
   </p>
-  
+</div>
+
+<div>
   <p id="Laura">
     <span style="font-family:GeneralSansMedium;font-size:20px">Laura</span></br>
     <span style="font-family:GeneralSansLight;font-size:18px">September, 2022</span></br>
@@ -128,7 +131,6 @@
     a family. The location is very beautiful und the  <span style="font-family:GeneralSansMediumItalic">communication was very easy.</span></br>
     We would definitely come again!</br>
   </p>
-
   <p id="Oscar">
     <span style="font-family:GeneralSansMedium;font-size:20px">Oscar</span></br>
     <span style="font-family:GeneralSansLight;font-size:18px">July, 2018</span></br>
@@ -138,7 +140,6 @@
     welcoming, gave us good tips and hints. <span style="font-family:GeneralSansMediumItalic">Couldn't ask for more!</span> We will</br>
     <span style="font-family:GeneralSansMediumItalic">definitely recommend</span> this place to our friends!
   </p>
-
   <p id="Mirek">
     <span style="font-family:GeneralSansMedium;font-size:20px">Mirek</span></br>
     <span style="font-family:GeneralSansLight;font-size:18px">July, 2018</span></br>
@@ -148,13 +149,12 @@
     allowed us a late check out the following day since our plane didn't leave until the</br>
     afternoon. Thanks so much for <span style="font-family:GeneralSansMediumItalic">a great stay!</span></br>
   </p>
+</div>
 
   <div id="footnote">
       <p id="contact">Contact</p>
-      <span style="font-family:GeneralSansLight;font-size:16px;color: black;">
-        <p style="position: relative;left: 7vw; top: 30px;">email: <a href="mailto:villastrmo@gmail.com">villastrmo@gmail.com </a></p>
-        <p style="position: relative;left: 7vw; top: 20px;">phone: +385 91 455 0781 </p>
-      </span>
+      <p id="emailphone">email: <a href="mailto:villastrmo@gmail.com">villastrmo@gmail.com </a></br>
+      phone: +385 91 455 0781 </p>
   </div>
 
 </body>
