--- a/availability.html
+++ b/availability.html
@@ -281,7 +281,7 @@
         - hot tub<br>
         - grill, wood, coal<br>
         - <span style="font-family:GeneralSansMediumItalic">parking</span><br>
-        - water and electricity consumption<br>
+        - e-scooter with three wheels
         - basic cooking supplies<br>
         - <span style="font-family:GeneralSansMediumItalic">wi-fi (fast 5g internet)</span><br>
         - bed sheet, towels<br>
@@ -292,7 +292,11 @@
 
         For all additional information, reservations and inquiries,<span style="font-family:GeneralSansMedium"> contact 
           us </span> via email <span style="font-family:GeneralSansMediumItalic">villastrmo@gmail.com</span>  or</br> on 
-          the phone <span style="font-family:GeneralSansMediumItalic"> +385 91 455 0781</span>.</p>
+          the phone <span style="font-family:GeneralSansMediumItalic"> +385 91 455 0781</span>.</br>
+    Note: Villa Strmo is rented in its entirety (house, summer kitchen, boat, jacuzzi, 2x StandUP Paddle Boards,</br>
+        e-scooter with three wheels. The owner does not live in the villa but is at your disposal for any questions or</br>
+        services. This way your family and friends have complete privacy during your stay.</p>
+        
       </div>
 
       <div id="footnote_av">
