--- a/availability.html
+++ b/availability.html
@@ -273,6 +273,10 @@
         Minimum stay is 6 nights.</br>
         For all information, it is <span style="font-family:GeneralSansMedium">best to contact us by email</span>, so that we can offer you the best option that would </br>fit into your budget.
         <br>
+        <br>
+    Note: Villa Strmo is rented in its <span style="font-family:GeneralSansMediumItalic">entirety</span> (house, summer kitchen, boat, jacuzzi, 2x StandUP Paddle Boards,</br>
+        e-scooter with three wheels. The owner does not live in the villa but is at your disposal for any questions or</br>
+        services. This way your family and friends have complete privacy during your stay.
 
         <br>
         <span style="font-family:GeneralSansMedium">The price includes</span>:<br>
@@ -292,10 +296,7 @@
 
         For all additional information, reservations and inquiries,<span style="font-family:GeneralSansMedium"> contact 
           us </span> via email <span style="font-family:GeneralSansMediumItalic">villastrmo@gmail.com</span>  or</br> on 
-          the phone <span style="font-family:GeneralSansMediumItalic"> +385 91 455 0781</span>.</br>
-    Note: Villa Strmo is rented in its entirety (house, summer kitchen, boat, jacuzzi, 2x StandUP Paddle Boards,</br>
-        e-scooter with three wheels. The owner does not live in the villa but is at your disposal for any questions or</br>
-        services. This way your family and friends have complete privacy during your stay.</p>
+          the phone <span style="font-family:GeneralSansMediumItalic"> +385 91 455 0781</span>.</p>
         
       </div>
 
