--- a/availability.html
+++ b/availability.html
@@ -276,7 +276,8 @@
         <br>
     Note: Villa Strmo is rented in its <span style="font-family:GeneralSansMediumItalic">entirety</span> (house, summer kitchen, boat, jacuzzi, 2x StandUP Paddle Boards,</br>
         e-scooter with three wheels. The owner does not live in the villa but is at your disposal for any questions or</br>
-        services. This way your family and friends have complete privacy during your stay.
+        services. This way your family and friends have complete privacy during your stay. <br>
+         <br>
 
         <br>
         <span style="font-family:GeneralSansMedium">The price includes</span>:<br>
