--- a/availability.html
+++ b/availability.html
@@ -286,11 +286,11 @@
         - hot tub<br>
         - grill, wood, coal<br>
         - <span style="font-family:GeneralSansMediumItalic">parking</span><br>
-        - e-scooter with three wheels
         - basic cooking supplies<br>
         - <span style="font-family:GeneralSansMediumItalic">wi-fi (fast 5g internet)</span><br>
         - bed sheet, towels<br>
         - accommodation tax<br>
+        - <span style="font-family:GeneralSansMediumItalic">e-scooter</span> with three wheels<br>
         - means for cleaning and washing clothes, dishes and the space<br>
         - <span style="font-family:GeneralSansMediumItalic">boat</span> in the summer season + 2x StandUP Paddle Boards<br>
         <br>
