Add Inquiry Tab

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <li><a class="active" href="index.html">The Villa</a></li>
         <li><a href="reviews.html">Reviews</a></li>
         <li><a href="availability.html">Availability</a></li>
+        <li><a href="inquiry.html">Inquiry</a></li>
         <li><a href="gallery.html">Gallery</a></li>
     </ul>
   </nav> 
