--- a/inquiry.html
+++ b/inquiry.html
@@ -3,13 +3,14 @@
 
 <head>
     <title> Inquiry </title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="inquiry.css">
     <script src="app.js" defer></script>
     <meta charset='utf-8'>
     <meta name="description" content="Rental Waterfront Villa">
     <meta name="author" content="L. Strmo">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
+
     <nav class="navbar">
         <ul>
             <li><a href="index.html">The Villa</a></li>
@@ -25,12 +26,12 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #FFFBEE;
       /* padding: 2em; */
     }
     .container {
       max-width: 600px;
       margin: auto;
+      margin-top: 4%;
       background-color: white;
       padding: 2em;
       border-radius: 10px;
