--- a/availability.html
+++ b/availability.html
@@ -16,6 +16,7 @@
       <li><a href="index.html">The Villa</a></li>
       <li><a href="reviews.html">Reviews</a></li>
       <li><a class="active" href="availability.html">Availability</a></li>
+      <li><a href="inquiry.html">Inquiry</a></li>
       <li><a href="gallery.html">Gallery</a></li>
   </ul>
 </nav> 
