Touches, details etc 2

--- a/availability.html
+++ b/availability.html
@@ -30,7 +30,7 @@
             width: 60vw;
             overflow-x: hidden;
             /* top: 150px; */
-            padding-top: 100px;
+            padding-top: 10px;
         }
         table {
             border-collapse: collapse;
@@ -241,6 +241,8 @@
     </style>
 </head>
 <body>
+    <h2 style="font-family: GeneralSansMedium; text-align: left; font-size: 1.77rem; margin-top: 30px; margin-left: 315px;">  Is your preferred date available?  </h2>
+
     <div id="all">
         <button id="prev-month">&#60;</button>
         <div id="current-month-year"></div>
@@ -262,7 +264,7 @@
         </tbody>
     </table>
     <button id="current-date">Today</button>
-    <button id="reserved">Reserved</button>
+    <button id="reserved">Unavailable</button>
     <button id="prev-year">Previous Year</button>
     <button id="next-year">Next Year</button>
 </div>
