--- a/gallery.html
+++ b/gallery.html
@@ -21,6 +21,8 @@
 </nav> 
 
 <body>
+  <!-- <h2 style="font-family: GeneralSansMedium; text-align: left; font-size: 1.77rem; margin-top: 30px; margin-left: 315px;">Explore the villa in pictures!</h2> -->
+
   <p class ="p">Garden, summer kitchen and villa's exterior</p>
 
   <img src="exterior/1.jpeg">
