--- a/inquiry.html
+++ b/inquiry.html
@@ -31,7 +31,7 @@
     .container {
       max-width: 600px;
       margin: auto;
-      margin-top: 4%;
+      margin-top: 0%;
       background-color: white;
       padding: 2em;
       border-radius: 10px;
@@ -74,6 +74,8 @@
     }
   </style>
   
+  <h2 style="font-family: GeneralSansMedium; text-align: left; font-size: 1.77rem; margin-top: 30px; margin-left: 315px;">Want to get in touch with us?</h2>
+
   <div class="container">
     <h2>Inquiry Form</h2>
     <form action="https://formspree.io/f/mldbbznn" method="POST">
