--- a/inquiry.html
+++ b/inquiry.html
@@ -74,7 +74,7 @@
     }
   </style>
   
-  <h2 style="font-family: GeneralSansMedium; text-align: left; font-size: 1.77rem; margin-top: 30px; margin-left: 315px;">Want to get in touch with us?</h2>
+  <h2 style="font-family: GeneralSansMedium; text-align: left; font-size: 1.77rem; margin-top: 30px; margin-left: 315px;">Get in touch with us!</h2>
 
   <div class="container">
     <h2>Inquiry Form</h2>
