--- a/inquiry.html
+++ b/inquiry.html
@@ -94,7 +94,7 @@
       <textarea id="message" name="message" rows="5" placeholder="Any specific questions or requests?"></textarea>
 
       <!-- Optional: redirect to a thank you page -->
-      <input type="hidden" name="_redirect" value=https://leonardastrmo.github.io/Family_Business_Website/thank-you.html>
+      <input type="hidden" name="_redirect" value="https://leonardastrmo.github.io/Family_Business_Website/thank-you.html">
 
       <button type="submit">Submit Inquiry</button>
     </form>
