--- a/inquiry.html
+++ b/inquiry.html
@@ -120,7 +120,7 @@
     });
 
     if (response.ok) {
-      window.location.href = "https://leonardastrmo.github.io/Family_Business_Website/thank-you.html";
+      window.location.href = "thank-you.html";
     } else {
       alert("There was a problem submitting the form.");
     }
